--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "chart.js": "^4.4.7",
+    "framer-motion": "^11.18.0",
     "next": "15.1.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "sonner": "^1.7.2"
