--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "@tanstack/react-query": "^5.64.1",
     "chart.js": "^4.4.7",
     "framer-motion": "^11.18.0",
     "next": "15.1.4",
