--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.10.0",
+    "@mui/material": "^6.4.1",
     "@prisma/client": "^6.2.1",
     "@tanstack/react-query": "^5.64.1",
     "chart.js": "^4.4.7",
@@ -17,8 +20,10 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
-    "sonner": "^1.7.2"
+    "sonner": "^1.7.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
