--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@mui/material": "^6.4.1",
     "@prisma/client": "^6.2.1",
-    "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query": "^5.65.1",
     "chart.js": "^4.4.7",
     "framer-motion": "^11.18.0",
     "next": "15.1.4",
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.3",
     "sonner": "^1.7.2",
     "yup": "^1.6.1"
   },
