--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.2.1",
     "@tanstack/react-query": "^5.65.1",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.18.0",
     "js-cookie": "^3.0.5",
     "next": "15.1.4",
